# gnome-media-player-ubuntu

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  gnome-media-player.1  gnome-media-player.desktop.in
debian/: apport_hook.py  changelog  control  copyright  rules  watch
debian/patches/: series
po/: LINGUAS  POTFILES.in  bg.po  cs.po  de.po  es.po  et.po  fi.po  fr.po  nb.po  pl.po  pt_BR.po  ru.po  ta.po  zh_CN.po
src/: Makefile.am  Makefile.in  engine.cc  engine.h  exception.cc  exception.h  gnome-media-player.cc  gnome-media-player.h  gnome-media-player.ui  gstreamer_engine.cc  gstreamer_engine.h  main_window.cc  main_window.h  vlc_engine.cc  vlc_engine.h  xine_engine.cc  xine_engine.h
